<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/round_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/assistant" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:text="Last News"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:text="@string/fact_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:text="@string/fact_3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:text="@string/fact_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:text="@string/fact_7" />

    </LinearLayout>
</LinearLayout>