<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:targetApi="n_mr1">
    <!--<editor-fold desc="Shortcuts">-->
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_write_note"
        android:shortcutDisabledMessage="@string/disabled_label_shortcut"
        android:shortcutId="note"
        android:shortcutLongLabel="@string/write_note_long_label_shortcut"
        android:shortcutShortLabel="@string/write_note_short_label_shortcut">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="shortcutapp://write_note_entry"
            android:targetClass="io.tohure.shortcuts.MainActivity"
            android:targetPackage="io.tohure.shortcuts" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_list_news"
        android:shortcutDisabledMessage="@string/disabled_label_shortcut"
        android:shortcutId="news"
        android:shortcutLongLabel="@string/list_news_long_label_shortcut"
        android:shortcutShortLabel="@string/list_news_short_label_shortcut">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="shortcutapp://view_list_news"
            android:targetClass="io.tohure.shortcuts.MainActivity"
            android:targetPackage="io.tohure.shortcuts" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@mipmap/ic_call_support"
        android:shortcutDisabledMessage="@string/disabled_label_shortcut"
        android:shortcutId="support"
        android:shortcutLongLabel="@string/call_support_long_label_shortcut"
        android:shortcutShortLabel="@string/call_support_short_label_shortcut">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="shortcutapp://call_support_center"
            android:targetClass="io.tohure.shortcuts.MainActivity"
            android:targetPackage="io.tohure.shortcuts" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <!--</editor-fold>-->

    <!--<editor-fold desc="Capabilities">-->
    <capability android:name="actions.intent.GET_NEWS_ARTICLE">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="shortcutapp://view_list_news"
            android:targetClass="io.tohure.shortcuts.MainActivity"
            android:targetPackage="io.tohure.shortcuts">
            <parameter
                android:name="newsArticle.about.name"
                android:key="aboutName" />
        </intent>
    </capability>
    <!--</editor-fold>-->

    <!--<editor-fold desc="Shortcuts binding to a Capability">-->
    <capability android:name="actions.intent.OPEN_APP_FEATURE">
        <intent
            android:targetClass="io.tohure.shortcuts.MainActivity"
            android:targetPackage="io.tohure.shortcuts">
            <parameter
                android:name="feature"
                android:key="featureParam" />
        </intent>
    </capability>

    <shortcut
        android:enabled="false"
        android:shortcutId="supportBinding"
        android:shortcutShortLabel="@string/call_support_short_label_shortcut">
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="@array/support_synonyms" />
        </capability-binding>
    </shortcut>
    <shortcut
        android:enabled="false"
        android:shortcutId="viewTime"
        android:shortcutShortLabel="@string/time_short_label_shortcut">
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="@array/time_synonyms" />
        </capability-binding>
    </shortcut>
    <shortcut
        android:enabled="false"
        android:shortcutId="assistant"
        android:shortcutShortLabel="@string/assistant_short_label_shortcut">
        <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
            <parameter-binding
                android:key="feature"
                android:value="@array/assistant_synonyms" />
        </capability-binding>
    </shortcut>
    <!--</editor-fold>-->

    <!--<editor-fold desc="Widget Capability">-->
    <capability android:name="actions.intent.GET_ITEM_LIST">
        <app-widget
            android:identifier="item_assistant"
            android:targetClass="io.tohure.shortcuts.FlowWidgetProvider" />
    </capability>
    <!--</editor-fold>-->
</shortcuts>